@@ -18,80 +18,45 @@ class DenierComponent extends Manager
 
     function run()
     {
-        if (! \Chamilo\Application\Weblcms\Request\Rights\Rights :: get_instance()->request_is_allowed())
+        if (!\Chamilo\Application\Weblcms\Request\Rights\Rights:: get_instance()->request_is_allowed())
         {
             throw new NotAllowedException();
         }
 
         $ids = $this->getRequest()->get(self :: PARAM_REQUEST_ID);
 
-        if (! empty($ids))
+        if (!empty($ids))
         {
-            if (! is_array($ids))
+            if (!is_array($ids))
             {
-                $failures = $this->single_deny($ids);
-                $ids = array($ids);
+                return $this->single_deny($ids);
             }
             else
             {
-                $failures = $this->multiple_denies($ids);
+                return $this->multiple_denies($ids);
             }
-
-            if ($failures)
-            {
-                if (count($ids) == 1)
-                {
-                    $message = 'ObjectNotDenied';
-                    $parameter = array('OBJECT' => Translation :: get('Request'));
-                }
-                elseif (count($ids) > $failures)
-                {
-                    $message = 'SomeObjectsNotDenied';
-                    $parameter = array('OBJECTS' => Translation :: get('Requests'));
-                }
-                else
-                {
-                    $message = 'ObjectsNotDenied';
-                    $parameter = array('OBJECTS' => Translation :: get('Requests'));
-                }
-            }
-            else
-            {
-                if (count($ids) == 1)
-                {
-                    $message = 'ObjectDenied';
-                    $parameter = array('OBJECT' => Translation :: get('Request'));
-                }
-                else
-                {
-                    $message = 'ObjectsDenied';
-                    $parameter = array('OBJECTS' => Translation :: get('Requests'));
-                }
-            }
-
-            $this->redirect(
-                Translation :: get($message, $parameter, Utilities :: COMMON_LIBRARIES),
-                ($failures ? true : false),
-                array(self :: PARAM_ACTION => self :: ACTION_BROWSE));
         }
-        else
-        {
-            return $this->display_error_page(
-                htmlentities(
-                    Translation :: get(
-                        'NoObjectSelected',
-                        array('OBJECT' => Translation :: get('Request')),
-                        Utilities :: COMMON_LIBRARIES)));
-        }
+
+        return $this->display_error_page(
+            htmlentities(
+                Translation:: get(
+                    'NoObjectSelected',
+                    array('OBJECT' => Translation:: get('Request')),
+                    Utilities :: COMMON_LIBRARIES
+                )
+            )
+        );
     }
 
     function single_deny($id)
     {
-        $request = DataManager :: retrieve_by_id(Request :: class_name(), (int) $id);
+        $request = DataManager:: retrieve_by_id(Request:: class_name(), (int) $id);
 
-        if (! \Chamilo\Application\Weblcms\Request\Rights\Rights :: get_instance()->is_target_user(
-            $this->get_user(),
-            $request->get_user_id()) && ! $this->get_user()->is_platform_admin())
+        if (!\Chamilo\Application\Weblcms\Request\Rights\Rights:: get_instance()->is_target_user(
+                $this->get_user(),
+                $request->get_user_id()
+            ) && !$this->get_user()->is_platform_admin()
+        )
         {
             throw new NotAllowedException();
         }
@@ -101,7 +66,9 @@ class DenierComponent extends Manager
         $form = new RequestForm(
             $request,
             $this->get_url(
-                array(self :: PARAM_ACTION => self :: ACTION_DENY, self :: PARAM_REQUEST_ID => $request->get_id())));
+                array(self :: PARAM_ACTION => self :: ACTION_DENY, self :: PARAM_REQUEST_ID => $request->get_id())
+            )
+        );
 
         if ($form->validate())
         {
@@ -111,7 +78,7 @@ class DenierComponent extends Manager
             $request->set_decision_date(time());
             $request->set_decision_motivation($values[Request :: PROPERTY_DECISION_MOTIVATION]);
 
-            if (! $request->update())
+            if (!$request->update())
             {
                 $failures ++;
             }
@@ -120,25 +87,25 @@ class DenierComponent extends Manager
                 $this->send_mail($request);
             }
 
-            return $failures;
+            return $this->redirectAfterDenyAction($failures, array($id));
         }
-        else
-        {
-            $form->freeze(
-                array(
-                    Request :: PROPERTY_COURSE_TYPE_ID,
-                    Request :: PROPERTY_NAME,
-                    Request :: PROPERTY_SUBJECT,
-                    Request :: PROPERTY_MOTIVATION));
 
-            $html = array();
+        $form->freeze(
+            array(
+                Request :: PROPERTY_COURSE_TYPE_ID,
+                Request :: PROPERTY_NAME,
+                Request :: PROPERTY_SUBJECT,
+                Request :: PROPERTY_MOTIVATION
+            )
+        );
 
-            $html[] = $this->render_header();
-            $html[] = $form->toHtml();
-            $html[] = $this->render_footer();
+        $html = array();
 
-            return implode(PHP_EOL, $html);
-        }
+        $html[] = $this->render_header();
+        $html[] = $form->toHtml();
+        $html[] = $this->render_footer();
+
+        return implode(PHP_EOL, $html);
     }
 
     function multiple_denies($ids)
@@ -147,17 +114,19 @@ class DenierComponent extends Manager
 
         foreach ($ids as $id)
         {
-            $request = DataManager :: retrieve_by_id(Request :: class_name(), (int) $id);
+            $request = DataManager:: retrieve_by_id(Request:: class_name(), (int) $id);
 
-            if (! \Chamilo\Application\Weblcms\Request\Rights\Rights :: get_instance()->is_target_user(
-                $this->get_user(),
-                $request->get_user_id()) && ! $this->get_user()->is_platform_admin())
+            if (!\Chamilo\Application\Weblcms\Request\Rights\Rights:: get_instance()->is_target_user(
+                    $this->get_user(),
+                    $request->get_user_id()
+                ) && !$this->get_user()->is_platform_admin()
+            )
             {
                 $failures ++;
             }
             else
             {
-                if (! $request->is_pending())
+                if (!$request->is_pending())
                 {
                     $failures ++;
                 }
@@ -166,7 +135,7 @@ class DenierComponent extends Manager
                     $request->set_decision(Request :: DECISION_DENIED);
                     $request->set_decision_date(time());
 
-                    if (! $request->update())
+                    if (!$request->update())
                     {
                         $failures ++;
                     }
@@ -178,18 +147,26 @@ class DenierComponent extends Manager
             }
         }
 
-        return $failures;
+        $this->redirectAfterDenyAction($failures, $ids);
     }
 
-    function send_mail(Request $request)
+    /**
+     * Sends a mail of the deny action
+     *
+     * @param Request $request
+     *
+     * @throws \Exception
+     */
+    protected function send_mail(Request $request)
     {
         set_time_limit(3600);
 
         $recipient = $request->get_user();
 
-        $title = Translation :: get(
+        $title = Translation:: get(
             'RequestDeniedMailTitle',
-            array('PLATFORM' => PlatformSetting :: get('site_name'), 'NAME' => $request->get_name()));
+            array('PLATFORM' => PlatformSetting:: get('site_name'), 'NAME' => $request->get_name())
+        );
 
         if (strlen($request->get_decision_motivation()) > 0)
         {
@@ -200,14 +177,16 @@ class DenierComponent extends Manager
             $variable = 'RequestDeniedMailBodySimple';
         }
 
-        $body = Translation :: get(
+        $body = Translation:: get(
             $variable,
             array(
                 'USER' => $recipient->get_fullname(),
-                'PLATFORM' => PlatformSetting :: get('site_name'),
+                'PLATFORM' => PlatformSetting:: get('site_name'),
                 'NAME' => $request->get_name(),
                 'DENIER' => $this->get_user()->get_fullname(),
-                'MOTIVATION' => $request->get_decision_motivation()));
+                'MOTIVATION' => $request->get_decision_motivation()
+            )
+        );
 
         $mail = new Mail($title, $body, $recipient->get_email());
 
@@ -221,5 +200,47 @@ class DenierComponent extends Manager
         catch (\Exception $ex)
         {
         }
+    }
+
+    /**
+     * Redirects the user to the list of requests after the requests have been denied
+     *
+     * @param int $failureCount
+     * @param int[]   $ids
+     */
+    protected function redirectAfterDenyAction($failureCount, $ids)
+    {
+        if ($failureCount)
+        {
+            if (count($ids) == 1)
+            {
+                $message = 'DecisionNotDenied';
+            }
+            elseif (count($ids) > $failureCount)
+            {
+                $message = 'SomeDecisionsNotDenied';
+            }
+            else
+            {
+                $message = 'DecisionsNotDenied';
+            }
+        }
+        else
+        {
+            if (count($ids) == 1)
+            {
+                $message = 'DecisionDenied';
+            }
+            else
+            {
+                $message = 'ObjectsDenied';
+            }
+        }
+
+        $this->redirect(
+            Translation:: get($message, array(), Manager::context()),
+            ($failureCount ? true : false),
+            array(self :: PARAM_ACTION => self :: ACTION_BROWSE)
+        );
     }
 }
