@@ -13,6 +13,10 @@ DecisionGranted = "Aanvraag goedgekeurd"
 DecisionMotivation = "Motivatie"
 DecisionPending = "Aanvraag hangende"
 DecisionDenied = "Aanvraag geweigerd"
+DecisionsDenied = "Aanvragen geweigerd"
+DecisionNotDenied = "Aanvraag kon niet geweigerd worden"
+SomeDecisionsNotDenied = "Sommige aanvragen konden niet geweigerd worden"
+DecisionsNotDenied = "Aanvragen konden niet geweigerd worden"
 DeniedRequests = "Geweigerde aanvragen"
 DenierComponent = "Weiger een aanvraag"
 Deny = "Weiger"
